# tree-sitter-taobin-language

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-taobin-language.pc.in
bindings/c/tree_sitter/: tree-sitter-taobin-language.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_taobin_language/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTaobinLanguageTests/: TreeSitterTaobinLanguageTests.swift
src/: grammar.json  node-types.json  parser.c
